--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@swimlane/ngx-charts": "^7.1.1",
     "core-js": "^2.5.3",
     "d3": "^4.13.0",
+    "ramda": "^0.25.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.20"
   },
@@ -34,6 +35,7 @@
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^9.4.6",
+    "@types/ramda": "types/npm-ramda#dist",
     "codelyzer": "^4.1.0",
     "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "^4.2.1",
