--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@swimlane/ngx-charts": "^7.1.1",
     "core-js": "^2.5.3",
     "d3": "^4.13.0",
+    "normalize.css": "^8.0.0",
     "ramda": "^0.25.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.20"
