--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-browser-dynamic": "^5.2.6",
     "@angular/router": "^5.2.6",
     "@swimlane/ngx-charts": "^7.1.1",
+    "@types/date-fns": "^2.6.0",
     "core-js": "^2.5.3",
     "d3": "^4.13.0",
+    "date-fns": "^1.29.0",
     "normalize.css": "^8.0.0",
     "ramda": "^0.25.0",
     "rxjs": "^5.5.6",
